# openclaw

./: .gitignore  AGENTS.md  CLAUDE.md  DISCORD_SETUP_NOTES.md  ISSUES.md  KNOWLEDGE.md  MAC_MINI_TOOLING_SETUP.md  MAC_MINI_TRANSFER_NOTES.md  Makefile  OPENCLAW_STATUS.md  QUICK_START.md  README.md  TASK_GRAPH_WIRING.md  agent-comparison.html  agent-instances.json  analyzer.py  cognitive-network.html  cognitive-network.json  git_utils.py  install_runtime_runner.sh  launch_llm_review_cycle.py  launch_review_cycle.py  meta-process.yaml  openclaw-architecture.html  pyproject.toml  review_cycle.defaults.yaml  run_task.py  spawn_extract.py  task_graph.py  task_planner.py  verify_runtime_runner.sh
archive/ontology_2026-02-05/: COGNITIVE_ONTOLOGY.md  ONTOLOGY_README.md  ONTOLOGY_STRUCTURE.md  README.md  (+3 more)
docs/: CLAUDE.md  wiki_manifest.yaml
hooks/: CLAUDE.md
prompts/: CLAUDE.md  agent_spawning.yaml  task_planner.yaml
schemas/: CLAUDE.md  flat_task_report.schema.json  graph_task_report.schema.json
scripts/: __init__.py  review_gate_log.py  task_cost.py  task_errors.py  task_summary.py
templates/: CLAUDE.md  multi_agent_handoff.yaml
tests/: test_analyzer.py  test_git_utils.py  test_launch_review_cycle_graph_contract.py  test_llm_review_cycle_adapter.py  test_run_task_analyzer_resilience.py  test_run_task_delivery_audit.py  test_run_task_postsuccess_recovery.py  test_run_task_reports.py  test_run_task_review_gate.py  test_runtime_bootstrap_imports.py  test_task_graph.py  test_task_graph_postsuccess_recovery.py  test_task_planner_delivery_modes.py
(+22 files in other folders)
