[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "moltbot"
version = "0.1.0"
description = "OpenClaw runtime / moltbot"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
